Capitulo 9 WIP + Cambio requisitos

--- a/memoria/Capitulos/manual.tex
+++ b/memoria/Capitulos/manual.tex
@@ -48,162 +48,94 @@ Tanto en el catálogo de muebles como en el de ropa, existen ítems con variacio
 
 \figura{0.5}{img/cap9/12-cat-muebles-variante.png}{Variación}{fig:variacion}{}
 
-En el catálogo de canciones, ademas de poder llevar recuento de aquellas canciones que hemos obtenido, podemos escucharlas. Si hacemos click en la imagen de la foto, esta empezará a reproducirse, y además disponemos de algunos controles en el reproductor abajo a la izquierda, tanto para pausar/continuar la canción como para ajustar el volumen.
+En el catálogo de canciones, ademas de poder llevar recuento de aquellas canciones que hemos obtenido, podemos escucharlas. Si hacemos click en la imagen de la foto, esta empezará a reproducirse, y además disponemos de algunos controles en el reproductor abajo a la izquierda, tanto para pausar/continuar la canción como para ajustar el volumen.\\
 
-............. 13 - Catalogo canciones ............
+\figura{0.5}{img/cap9/13-catalogo-canciones.png}{Catálogo canciones}{fig:catcancion}{}
 
-Una vez terminado con los catálogos de la página de inicio, tenemos algunas otras herramientas
-accesibles desde la barra superior de navegación.
+Una vez terminado con los catálogos de la página de inicio, tenemos algunas otras herramientas accesibles desde la barra superior de navegación.\\
 
-............. 14 - Nav ............
+\figura{0.5}{img/cap9/14-nav.png}{Barra de navegación}{fig:nav}{}
 
-Si hacemos click en la imágen de la izquierda, nos llevará a la página de inicio.
-Luego en la parte central disponemos de cuatro botones. El primero, "Cazar ahora", nos lleva
-a un catálogo de los tres tipos de criaturas capturables, con la pecualiaridad de que solo
-nos muestran aquellas criaturas capturables en la fecha y hora actuales.
+Si hacemos click en la imagen de la izquierda, nos llevará a la página de inicio. Luego en la parte central disponemos de cuatro botones. El primero, "Cazar ahora", nos lleva a un catálogo de los tres tipos de criaturas obtenibles, con la peculiaridad de que solo nos muestran aquellas criaturas capturables en la fecha y hora actuales.\\
 
-............. 15 - Cazar ahora ............
+\figura{0.5}{img/cap9/15-cazar-ahora.png}{Cazar ahora}{fig:cazarahora}{}
 
-Aquí, no solo disponemos de los filtros que tienen en su catálogo correspondiente, sino que
-además podemos cambiar el mes y hora, asi como el hemisferio (de manera global) para poder
-ver aquellas criaturas en función del mes y hora, de forma que le sea más sencillo al usuario
-y no tenga que dar vueltas por la isla sin saber qué o dónde se puede encontrar.
+Aquí, no solo disponemos de los filtros que tienen en su catálogo correspondiente, sino que además podemos cambiar el mes y hora, asi como el hemisferio (de manera global) para poder ver aquellas criaturas en función del mes y hora, de forma que le sea más sencillo al usuario y no tenga que dar vueltas por la isla sin saber qué o dónde se puede encontrar.\\
 
-Si hemos modificado el mes y/o la hora y deseamos volver a la actual, es tan fácil como
-hacer click en el botón de la flecha roja.
+Si hemos modificado el mes y/o la hora y deseamos volver a la actual, es tan fácil como hacer click en el botón de la flecha roja.\\
 
-............. 16 - Filtros cazar ahora ............
+\figura{0.5}{img/cap9/16-filtros-cazar-ahora.png}{Filtros}{fig:filtros}{}
 
-Dentro de este catálogo, de base apareceremos en la pantalla de los insectos, por lo que si
-queremos ver los peces o las criaturas marinas es tán fácil como hacer click en el botón
-correspondiente a la derecha de los filtros.
+Dentro de este catálogo, de base apareceremos en la pantalla de los insectos, por lo que si queremos ver los peces o las criaturas marinas es tan fácil como hacer click en el botón correspondiente a la derecha de los filtros.\\
 
-Volviendo a la barra de navegación superior, el siguiente botón sería el de "Sueños", pero para
-explicar por completo su funcionalidad necesitamos antes pasar por el perfil, por lo que se
-hablará de este catálogo más adelante. Por lo que primero haremos click en el botón que
-pone "Mercado Nabos", que nos llevará a la siguiente pantalla.
+Volviendo a la barra de navegación superior, el siguiente botón sería el de "Sueños", pero para explicar por completo su funcionalidad necesitamos antes pasar por el perfil, por lo que se hablará de este catálogo más adelante. Por lo que primero haremos click en el botón que pone "Mercado Nabos", que nos llevará a la siguiente pantalla.\\
 
-............. 17 - Mercado nabos ............
+\figura{0.5}{img/cap9/17-mercado-nabos.png}{Mercado nabos}{fig:mercadonabos}{}
 
-En esta página podemos predecir tanto el precio de los nabos en la isla esta semana, así
-como el patrón que seguirá, y los posibles máximos y mínimos, todo para intentar sacar el
-mayor beneficio posible.
+En esta página podemos predecir tanto el precio de los nabos en la isla esta semana, así como el patrón que seguirá, y los posibles máximos y mínimos, todo para intentar sacar el mayor beneficio posible.\\
 
-Para empezar, debemos rellenar tantos campos como podamos. El primero indica si es la primera
-vez que el usuario compra nabos o no, ya que la primera vez siempre se obtiene el mismo patrón.
-El segundo botón indica el patrón de la semana anterior, que también dispone de un botón en
-caso de que el usuario no lo sepa. Por último, hay que indicar el precio al que se compraron
-los nabos el domingo.
+Para empezar, debemos rellenar tantos campos como podamos. El primero indica si es la primera vez que el usuario compra nabos o no, ya que la primera vez siempre se obtiene el mismo patrón.
+El segundo botón indica el patrón de la semana anterior, que también dispone de un botón en caso de que el usuario no lo sepa. Por último, hay que indicar el precio al que se compraron los nabos el domingo.\\
 
-............. 18 - Datos nabos ............
+\figura{0.5}{img/cap9/18-datos-nabos.png}{Datos}{fig:datos}{}
 
-A partir de aquí, hay que indicar el precio al que Tendo y Nendo compran los nabos, tanto
-por la mañana como por la tarde. A mayor datos se introduzcan, mas precisa será la predicción.
-Como podemos ver, indicando los tres primeros campos, así como los precios del lunes, ya
-obtenemos una predicción bastante segura.
+A partir de aquí, hay que indicar el precio al que Tendo y Nendo compran los nabos, tanto por la mañana como por la tarde. A mayor datos se introduzcan, mas precisa será la predicción. Como podemos ver, indicando los tres primeros campos, así como los precios del lunes, ya obtenemos una predicción bastante segura.\\
 
-............. 19 - Tabla prediccion ............
+\figura{0.5}{img/cap9/19-tabla-prediccion.png}{Tabla predicción}{fig:tablaprediccion}{}
 
-Como podemos observar, se nos indica una fila por cada posible "ruta" que puede suceder esa semana.
-A la izquierda vemos el patrón que podemos obtener, seguido de dos porcentajes que indican,
-el primero la probabilidad del patrón, y el segundo la probabilidad de la "ruta" dentro del
-patrón. Luego observamos los precios, tanto los indicados por el usuario como los posibles
-para el resto de la semana. Los distintos colores representan el beneficio que puede representar,
-siendo rojo el menor beneficio y el verde oscuro el mayor beneficio.
+Como podemos observar, se nos indica una fila por cada posible "ruta" que puede suceder esa semana. A la izquierda vemos el patrón que podemos obtener, seguido de dos porcentajes que indican, el primero la probabilidad del patrón, y el segundo la probabilidad de la "ruta" dentro del patrón. Luego observamos los precios, tanto los indicados por el usuario como los posibles para el resto de la semana. Los distintos colores representan el beneficio que puede representar, siendo rojo el menor beneficio y el verde oscuro el mayor beneficio.\\
 
-Por último, las dos últimas columnas nos indican tanto el mínimo garantizado como el 
-máximo potencial al que se puede llegar.
+Por último, las dos últimas columnas nos indican tanto el mínimo garantizado como el máximo potencial al que se puede llegar.\\
 
-Por ejemplo, si nos fijamos en la tabla, vemos que hay un 100% de probabilidades de que esta
-semana obtengamos un patrón "Pico pequeño", dentro del cual, a falta de más datos, tenemos 6
-posibles "rutas" las cuales tienen todas la misma probabilidad de ocurrir. Sin embargo, todas
-tienen el mismo mínimno y máximo, siendo 139 y 200 respectivamente. 
+Por ejemplo, si nos fijamos en la tabla, vemos que hay un 100\% de probabilidades de que esta semana obtengamos un patrón "Pico pequeño", dentro del cual, a falta de más datos, tenemos seis posibles "rutas" las cuales tienen todas la misma probabilidad de ocurrir. Sin embargo, todas tienen el mismo mínimo y máximo, siendo 139 y 200 bayas respectivamente.\\ 
 
-............. 20 - Tabla precisa ............
+\figura{0.5}{img/cap9/20-tabla-precisa.png}{Predicción precisa}{fig:prediccionprecisa}{}
 
-Si rellenamos más datos a lo largo de la semana, vemos que se van reduciendo el número de filas
-ya que la predicción es mas precisa. Una vez rellenado los datos hasta la mitad del jueves,
-observamos que efectivamente, el patrón de esta semana es el "Pico pequeño", que el mínimo y 
-máximo son los comentados anteriormente y que, el beneficio lo obtendremos entre la segunda mitad del
-jueves al sábado.
+Si rellenamos más datos a lo largo de la semana, vemos que se van reduciendo el número de filas ya que la predicción es mas precisa. Una vez rellenado los datos hasta la mitad del jueves, observamos que efectivamente, el patrón de esta semana es el "Pico pequeño", que el mínimo y  máximo son los comentados anteriormente y que, el beneficio lo obtendremos entre la segunda mitad del jueves al sábado.\\
 
-Obviamente, al ser datos ficticios no representa al 100% la precisión de la herramienta, pero
-con datos reales obtenidos del juego que resulten mas coherentes con el algoritmo establecido
-dentro del juego, se pueden obtener resultados bastante precisos.
+Obviamente, al ser datos ficticios no representa al 100\% la precisión de la herramienta, pero con datos reales obtenidos del juego que resulten mas coherentes con el algoritmo establecido dentro del juego, se pueden obtener resultados bastante precisos.\\
 
-............. 21 - Info nabos ............
+\figura{0.5}{img/cap9/21-info-nabos.png}{Información mercado}{fig:infomercado}{}
 
-Si bajamos un poco, veremos que el usuario dispone de información para aprender cómo funciona
-el mercado de nabos dentro del juego, así como los posibles patrones que existen. Si coloca
-el cursor encima de cualquiera de las tarjetas de los patrones, podrá ver que aparece una
-breve descripción del funcionamiento del patrón en cuestión. De esta forma, el usuario puede
-acceder a esta información para intentar rellenar los datos de la manera más precisa posible,
-obteniendo así un mejor resultado.
+Si bajamos un poco, veremos que el usuario dispone de información para aprender cómo funciona el mercado de nabos dentro del juego, así como los posibles patrones que existen. Si coloca el cursor encima de cualquiera de las tarjetas de los patrones, podrá ver que aparece una breve descripción del funcionamiento del patrón en cuestión. De esta forma, el usuario puede acceder a esta información para intentar rellenar los datos de la manera más precisa posible, obteniendo así un mejor resultado.\\
 
-............. 22 - Info patrones ............
+\figura{0.5}{img/cap9/22-info-patrones.png}{Información patrones}{fig:infopatrones}{}
 
-La siguiente parada dentro de la barra de navegación superior sería el "Calendario", el cual
-nos llevará a la siguiente pantalla al hacer click en él.
+La siguiente parada dentro de la barra de navegación superior sería el "Calendario", el cual nos llevará a la siguiente pantalla al hacer click en él.\\
 
-............. 23 - Calendario ............
+\figura{0.5}{img/cap9/23-calendario.png}{Calendario}{fig:calendario}{}
 
-En esta pantalla disponemos de un calendario por el que podemos navegar, en el cuál se nos
-indican los eventos disponibles, siendo estos los cumpleaños de los distintos vecinos, así como
-otros eventos más especiales. En azul clarito se resalta el día en el que nos encontramos,
-y si colocamos el cursor sobre cualquiera de los iconos situados en la parte inferior izquierda
-de cada día, podremos ver el título del evento. Si se trata de un cumpleaños, la celda obtendrá
-un color verde, mientras que si se trata de otro tipo de evento, tendrá un color distinto.
+En esta pantalla disponemos de un calendario por el que podemos navegar, en el cuál se nos indican los eventos disponibles, siendo estos los cumpleaños de los distintos vecinos, así como otros eventos más especiales. En azul clarito se resalta el día en el que nos encontramos, y si colocamos el cursor sobre cualquiera de los iconos situados en la parte inferior izquierda de cada día, podremos ver el título del evento. Si se trata de un cumpleaños, la celda obtendrá un color verde, mientras que si se trata de otro tipo de evento, tendrá un color distinto.\\
 
-............. 24 - Calendario cumple ............
+\figura{0.5}{img/cap9/24-calendario-cumple.png}{Cumpleaños}{fig:cumplanos}{}
 
-Si por ejemplo nos vamos al 31 de octubre, veremos que el icono corresponde a uno de los NPCs
-del juego, y al colocar el cursor sobre el, no solo nos indica que se trata de Halloween, sino
-que la celda obtiene un color anaranjado. Si en este caso (tratándose de un evento especial),
-hacemos click en el icono, se nos abrirá un menú con información del evento,
+Si por ejemplo nos vamos al 31 de octubre, veremos que el icono corresponde a uno de los NPCs del juego, y al colocar el cursor sobre el, no solo nos indica que se trata de Halloween, sino que la celda obtiene un color anaranjado. Si en este caso (tratándose de un evento especial), hacemos click en el icono, se nos abrirá un menú con información del evento.\\
 
-............. 25 - Calendario halloween ............
+\figura{0.5}{img/cap9/25-calendario-halloween.png}{Evento}{fig:evento}{}
 
-............. 26 - Evento halloween ............
+\figura{0.5}{img/cap9/26-evento-halloween.png}{Halloween}{fig:halloween}{}
 
-A continuación, como podemos ver en la barra de navegación, a la derecha del todo tenemos
-nuestro nombre de usuario seguido de una foto. Si hacemos click en la foto se nos abrirá un
-menú desplegable que nos da la opción de, o ir a nuestro perfil, o cerrar sesión. En este caso
-haremos click en el botón "Perfil", que nos llevará tal y como indica su nombre, a nuestro perfil.
+A continuación, como podemos ver en la barra de navegación, a la derecha del todo tenemos nuestro nombre de usuario seguido de una foto. Si hacemos click en la foto se nos abrirá un menú desplegable que nos da la opción de, o ir a nuestro perfil, o cerrar sesión. En este caso haremos click en el botón "Perfil", que nos llevará tal y como indica su nombre, a nuestro perfil.\\
 
-............. 27 - Nav perfil ............
+\figura{0.5}{img/cap9/27-nav-perfil.png}{Desplegable perfil}{fig:navperfil}{}
 
-............. 28 - Perfil ............
+\figura{0.5}{img/cap9/28-perfil.png}{Perfil}{fig:perfil}{}
 
-Observemos primero el menú de la izquierda. Representa el pasaporte del usuario, donde podremos
-ver la información proporcionada en el registro, así como el signo del zodíaco al que 
-pertenece. Si el usuario quisiera modificar los datos, sería tan sencillo como hacer click
-en el lapiz azul del pasaporte, lo que nos llevaría al modo edición del mismo.
+Observemos primero el menú de la izquierda. Representa el pasaporte del usuario, donde podremos ver la información proporcionada en el registro, así como el signo del zodiaco al que pertenece. Si el usuario quisiera modificar los datos, sería tan sencillo como hacer click en el lápiz azul del pasaporte, lo que nos llevaría al modo edición del mismo.\\
 
-............. 29 - Pasaporte editando ............
+\figura{0.5}{img/cap9/29-pasaporte-editando.png}{Editar perfil}{fig:editarperfil}{}
 
-Una vez en dicho modo edición, podemos cambiar los datos a nuestro antojo, siempre y cuando
-cumplan los criterios de validación. Una vez listo, hacemos click en el botón del check
-verde para confirmar la operación. En caso de querer cancelar la operación, es tan fácil como volver
-a dejar los datos como estaban y hacer click en el check verde.
+Una vez en dicho modo edición, podemos cambiar los datos a nuestro antojo, siempre y cuando cumplan los criterios de validación. Una vez listo, hacemos click en el botón del check verde para confirmar la operación. En caso de querer cancelar la operación, es tan fácil como volver a dejar los datos como estaban y hacer click en el check verde.\\
 
-............. 30 - Pasaporte updated ............
+\figura{0.5}{img/cap9/30-pasaporte-updated.png}{Perfil actualizado}{fig:perfilactualizado}{}
 
-Como podemos ver, se ha actualizado la información y además se ha cambiado el color de fondo
-del pasaporte. El fondo varía de forma aleatoria tanto al acceder al perfil como al actualizar
-la información.
+Como podemos ver, se ha actualizado la información y además se ha cambiado el color de fondo del pasaporte. El fondo varía de forma aleatoria tanto al acceder al perfil como al actualizar la información.\\
 
-Ahora fijémonos en el menú que se encuentra a la derecha. Ahi podemos encontrar dos de las 
-herramientas más importantes y útiles para el usuario. En primer lugar, se trata de las
-tareas personales. Al acceder al perfil por primera vez se encontrará vacío, como es nuestro
-caso. Sin embargo, haciendo click en el lápiz que encontramos a la derecha de dicho menú, entramos
-en el modo edición del mismo.
+Ahora fijémonos en el menú que se encuentra a la derecha. Ahí podemos encontrar dos de las herramientas más importantes y útiles para el usuario. En primer lugar, se trata de las tareas personales. Al acceder al perfil por primera vez se encontrará vacío, como es nuestro caso. Sin embargo, haciendo click en el lápiz que encontramos a la derecha de dicho menú, entramos en el modo edición del mismo.\\
 
-............. 31 - Tareas edicion ............
+\figura{0.5}{img/cap9/31-tareas-edicion.png}{Modo edición}{fig:modoedicion}{}
 
-Como podemos observar, ha aparecido un botón amarillo con un '+'. Si hacemos click en ese
-botón, se nos creará una tarea nueva. Podemos crear hasta un máximo de 10 tareas, de forma
-que cuando creemos la décima ya no aparecerá el botón de crear. A continuación vamos a crear 
-tres tareas.
+Como podemos observar, ha aparecido un botón amarillo con un '+'. Si hacemos click en ese botón, se nos creará una tarea nueva. Podemos crear hasta un máximo de 10 tareas, de forma que cuando creemos la décima ya no aparecerá el botón de crear. A continuación vamos a crear tres tareas.\\
 
 ............. 32 - Tres tareas ............
 
