Cap 9 done + posicionamiento

--- a/memoria/Capitulos/alternativas.tex
+++ b/memoria/Capitulos/alternativas.tex
@@ -1,10 +1,12 @@
 \chapter{Comparación con otras alternativas}\label{alternativas}
 
-El principal objetivo de nuestra aplicación era reunir y centralizar el mayor número de herramientas útiles posibles para aquellas personas que jugasen a "Animal Crossing: New Horizons", especialmente aquellas que te permitan llevar un progreso de tu día a día en el juego. Además, buscábamos adaptar las aplicaciones móvil existentes a ordenador, ya que contienen herramientas bastante útiles que no están disponibles en la mayoría de aplicaciones web.\\
+El principal objetivo de nuestra aplicación era reunir y centralizar el mayor número de herramientas útiles posibles para aquellas personas que jugasen a ``Animal Crossing: New Horizons", especialmente aquellas que te permitan llevar un progreso de tu día a día en el juego. Además, buscábamos adaptar las aplicaciones móvil existentes a ordenador, ya que contienen herramientas bastante útiles que no están disponibles en la mayoría de aplicaciones web.\\
 
-Por lo tanto, vamos a comparar las herramientas disponibles en una serie de alternativas con las disponibles en nuestra aplicación.\\
+Por lo tanto, vamos a comparar las herramientas disponibles en una serie de alternativas con las disponibles en nuestra aplicación {(v\'ease la figura~\ref{fig:comparativaalternativas})}.\\
 
-\figura{0.8}{img/cap8/tabla-alternativas.png}{Comparación alternativas}{fig:comparativaalternativas}{}
+\figura{0.7}{img/cap8/tabla-alternativas.png}{Comparación alternativas}{fig:comparativaalternativas}{}
+
+\clearpage
 
 Como podemos observar, nuestros mayores dos competidores son ACNH Life y ACNH Guide, ambos aplicaciones de móvil que cuentan con las herramientas de tareas diarias y visitantes semanales entre otras. Sin embargo, nuestra aplicación destaca por dos factores principales: el catálogo de música con posibilidad de reproducir las canciones y el álbum de fotos personal.\\
 
