--- a/memoria/Capitulos/analanteced.tex
+++ b/memoria/Capitulos/analanteced.tex
@@ -20,9 +20,9 @@ Todos estos servicios web, incluido el nuestro, han podido hacer uso de dicha he
 
 En este videojuego existe la posibilidad de que tus vecinos decidan irse de tu isla. Esta funcionalidad, al igual que la de los nabos, sigue un algoritmo que se puede usar para calcular la probabilidad de que alguien se mude en un día en concreto, y si se da el caso, averiguar cuál es el vecino que tiene más probabilidades de mudarse.\\
 
-\figura{0.8}{img/cap3/mudanza.jpg}{Mudanza}{fig:mudanza}{}
+\figura{0.8}{img/cap3/mudanza.jpg}{Mudanza}{fig:antmudanza}{}
 
-Para realizar esos cálculos existen varias páginas web {(v\'ease la figura~\ref{fig:mudanza})}, como puede ser \href{https://nookplaza.net/tools?tab=move_out}{NookPlaza}, la cual no solo ofrece la funcionalidad de calcular las mudanzas de vecinos, sino que además ofrece algunas pequeñas funcionalidades más. Otro ejemplo de este servicio sería \href{https://yuexr.github.io/villager-moveout-calculator/}{Yue's Move-Out Calculator}, donde además se puede calcular la probabilidad de mudanza en caso de que más de un jugador viva en la misma isla, añadiendo datos sobre cada jugador para realizar una media y obtener una predicción fiable.\\
+Para realizar esos cálculos existen varias páginas web {(v\'ease la figura~\ref{fig:antmudanza})}, como puede ser \href{https://nookplaza.net/tools?tab=move_out}{NookPlaza}, la cual no solo ofrece la funcionalidad de calcular las mudanzas de vecinos, sino que además ofrece algunas pequeñas funcionalidades más. Otro ejemplo de este servicio sería \href{https://yuexr.github.io/villager-moveout-calculator/}{Yue's Move-Out Calculator}, donde además se puede calcular la probabilidad de mudanza en caso de que más de un jugador viva en la misma isla, añadiendo datos sobre cada jugador para realizar una media y obtener una predicción fiable.\\
 
 Al igual que con el algoritmo de los nabos, este servicio también ha sido desarrollado por el usuario \textit{Ninji}.
 
