--- a/memoria/proyect.tex
+++ b/memoria/proyect.tex
@@ -28,9 +28,9 @@
     \input{agradecimientos}	
 
 	\tableofcontents % Índice de contenidos
- 	\listoftables % Índice de cuadros
+ 	%\listoftables % Índice de cuadros
  	\listoffigures % Índice de figuras
- 	\lstlistoflistings %Índice de códigos
+ 	%\lstlistoflistings %Índice de códigos
 
  \mainmatter  
     
@@ -47,7 +47,7 @@
 \backmatter
 
 \input{Capitulos/conclusiones}
-\input{Capitulos/apendices}
+%\input{Capitulos/apendices}
 \input{Capitulos/bibliografia}
 
 %\bibliographystyle{sousa5}
