--- a/memoria/pfcbib.bib
+++ b/memoria/pfcbib.bib
@@ -13,16 +13,6 @@
   timestamp = {2008.08.08}
 }
 
-@BOOK{desousa,
-  title = {Ortografía y ortotipografía del español actual},
-  year = {2004},
-  publisher = {Trea},
-  author = {José Martínez de Sousa},
-  owner = {fcaro},
-  timestamp = {2008.08.13}
-}
-
-
 @MISC{informatica,
   title = {Escuela {T}\'ecnica {S}uperior de {I}ngenier{\'\i}a {I}nform\'atica},
   year = {2014},
@@ -42,3 +32,13 @@
 
 @comment{jabref-meta: selector_keywords:}
 
+@MISC{acnhapi,
+	title = {ACNH API},
+	year = {2020},
+	publisher = {Alexis8717},
+	author = {Alexis8717},
+	url = {https://acnhapi.com},
+	Note = {fecha de consulta: 3 de Febrero de 2021},
+	owner = {Alexis8717},
+	timestamp = {}
+}
