--- a/memoria/proyect.tex
+++ b/memoria/proyect.tex
@@ -52,8 +52,8 @@
 
 %\bibliographystyle{sousa5}
 
-%\bibliographystyle{apacite}
+\bibliographystyle{apacite}
 
-%\bibliography{pfcbib}
+\bibliography{pfcbib}
 
 \end{document}
