--- a/memoria/pfcbib.bib
+++ b/memoria/pfcbib.bib
@@ -1,7 +1,7 @@
 % This file was created with JabRef 2.3.1.
 % Encoding: UTF-8
 
-@ARTICLE{guiatitlesec,
+@ARTICLE{nabospolygon,
   author = {Javier Bezos},
   title = {The titlesec and titletoc Packages},
   journal = {TexEmplares},
@@ -13,15 +13,16 @@
   timestamp = {2008.08.08}
 }
 
-@MISC{informatica,
-  title = {Escuela {T}\'ecnica {S}uperior de {I}ngenier{\'\i}a {I}nform\'atica},
-  year = {2014},
-  publisher = {ETSII},
-  author = {Varios Autores},
-  url = {http://www.informatica.us.es},
-  Note = {fecha de consulta: 24 de Noviembre de 2014},
-  owner = {fcaro},
-  timestamp = {2008.08.13}
+@ARTICLE{nabospolygon,
+	author = {Javier Bezos},
+	title = {The titlesec and titletoc Packages},
+	journal = {TexEmplares},
+	publisher = {Cervan{\TeX}},
+	Volume = 8,
+	Pages = "283--298",
+	year = {2007},
+	owner = {fernando},
+	timestamp = {2008.08.08}
 }
 
 @comment{jabref-meta: selector_publisher:}
@@ -38,7 +39,106 @@
 	publisher = {Alexis8717},
 	author = {Alexis8717},
 	url = {https://acnhapi.com},
-	Note = {fecha de consulta: 3 de Febrero de 2021},
+	Note = {fecha de consulta: Febrero de 2021},
 	owner = {Alexis8717},
+	timestamp = {}
+}
+
+@MISC{acnhnpm,
+	title = {Animal Crossing: New Horizons database for npm},
+	year = {2020},
+	publisher = {Norviah},
+	author = {Norviah},
+	url = {https://github.com/Norviah/animal-crossing},
+	Note = {fecha de consulta: Febrero de 2021},
+	owner = {Norviah},
+	timestamp = {}
+}
+
+@MISC{turnipprophet,
+	title = {Turnip Prophet},
+	year = {2020},
+	publisher = {},
+	author = {Varios Autores},
+	url = {https://turnipprophet.io/},
+	Note = {fecha de consulta: Abril de 2021},
+	owner = {Mike Bryant},
+	timestamp = {}
+}
+
+@MISC{nabosninji,
+	title = {Turnip Prices},
+	year = {2020},
+	publisher = {Ninji},
+	author = {Ninji},
+	url = {https://turnipprophet.io/},
+	Note = {fecha de consulta: Abril de 2021},
+	owner = {Ninji},
+	timestamp = {}
+}
+
+@MISC{nabosninji,
+	title = {Turnip Prices},
+	year = {2020},
+	publisher = {Ninji},
+	author = {Ninji},
+	url = {https://gist.github.com/Treeki/85be14d297c80c8b3c0a76375743325b},
+	Note = {fecha de consulta: Abril de 2021},
+	owner = {Ninji},
+	timestamp = {}
+}
+
+@MISC{cursoangular,
+	title = {Angular 10 - Curso completo - Tutorial},
+	year = {2019},
+	publisher = {LeParadoxHD},
+	author = {LeParadoxHD},
+	url = {https://www.youtube.com/watch?v=SZtxwDAqEok&list=PLezsbUDiwcpmhNiMzVPYJXV0Rqn71G4PU},
+	Note = {fecha de consulta: Octubre de 2020},
+	owner = {LeParadoxHD},
+	timestamp = {}
+}
+
+@MISC{nookipedia,
+	title = {Nookipedia},
+	year = {2010},
+	publisher = {},
+	author = {Varios Autores},
+	url = {https://nookipedia.com/wiki/Main_Page},
+	Note = {fecha de consulta: Octubre de 2020},
+	owner = {},
+	timestamp = {}
+}
+
+@MISC{acnhdirectory,
+	title = {ACNH.Directory},
+	year = {2020},
+	publisher = {KevinPayravi},
+	author = {KevinPayravi},
+	url = {https://nookipedia.com/wiki/Main_Page},
+	Note = {fecha de consulta: Octubre de 2020},
+	owner = {KevinPayravi},
+	timestamp = {}
+}
+
+@MISC{nookipediaapi,
+	title = {Nookiepdia API},
+	year = {2020},
+	publisher = {KevinPayravi},
+	author = {KevinPayravi},
+	url = {https://api.nookipedia.com},
+	Note = {fecha de consulta: Febrero de 2021},
+	owner = {KevinPayravi},
+	timestamp = {}
+}
+
+@MISC{angularcalendar,
+	title = {Angular Calendar},
+	year = {2018},
+	publisher = {Matt Lewis},
+	author = {Matt Lewis},
+	url = {https://github.com/mattlewis92/angular-calendar},
+	Note = {fecha de consulta: Abril de 2021},
+	owner = {Matt Lewis},
 	timestamp = {}
 }
